fix layout issue in main that causes scrolling

--- a/style.css
+++ b/style.css
@@ -5,17 +5,19 @@
     font-style: normal; 
 }
 
+*{
+    box-sizing: border-box;
+}
 html {
-    height: 100vh;
-    width: 100vw;
     font-family: "Roboto";
+    height: 100vh;
 }
 
 body {
     margin: 0;
     padding: 0;
     height: 100%;
-    box-sizing: border-box;
+    width: 100%;
 
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -124,8 +126,9 @@ button:hover {
     grid-row: 2/-1;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-auto-rows: max-content;
     padding: 3rem;
+    padding-bottom: 0px;
     gap: 20px;
     box-shadow: inset 0px 4px 5px -2px #5B21B6;
 }
@@ -138,8 +141,10 @@ button:hover {
 }
 
 .projects {
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-auto-rows: max-content;
     gap: 20px;
 }
 
